--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,7 +334,7 @@ li.nav-item.dropdown li a {
   height: 100%;
   border-radius: 10px;
 }
-.card-view-data-header h3 {
+.card-view-data-header h2 {
   font-size: 18px;
   line-height: 22px;
   color: #fff;
@@ -427,8 +427,8 @@ li.nav-item.dropdown li a {
 .pb120 {
   padding-bottom: 120px;
 }
-.common-heading-area h3 {
-  font-size: 36px;
+.common-heading-area h1 {
+  font-size: 38px;
   line-height: 52px;
   margin-bottom: 16px;
   font-weight: 600;
@@ -909,7 +909,7 @@ table {
 }
 .accordion-button::after {
   background: #fdf3da;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='36' height='36' fill='rgba(245, 196, 72, 1)' class='bi bi-plus' viewBox='0 0 16 16'%3E%3Cpath d='M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='36' height='36' fill='rgba(245, 196, 72, 1)' class='bi bi-plus' viewBox='0 0 16 16'%3E%3Cpath d='M8 4a.5.5 0 0 1 .5.5v3h2a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h2v-3A.5.5 0 0 1 8 4z'/%3E%3C/svg%3E");
   background-size: 36px 36px; /* Adjust icon size */
   background-repeat: no-repeat;
   background-position: center;
@@ -986,10 +986,10 @@ table {
 .app-qr-code img {
   padding: 28px;
 }
-.appversionContent .common-heading-area h3 {
+.appversionContent .common-heading-area h2 {
   font-size: 39px;
 }
-.appversionContent .common-heading-area h3,
+.appversionContent .common-heading-area h2,
 .appversionContent .common-heading-area p {
   color: #fff;
 }
@@ -1210,7 +1210,7 @@ table {
   color: #fff;
   margin-bottom: 40px;
 }
-.common-page-inner .common-heading-area h3 {
+.common-page-inner .common-heading-area h2 {
   font-size: 55px;
   color: #fff;
   line-height: 64px;
@@ -1488,7 +1488,7 @@ table {
 .contact-info-box {
   background-color: #fff;
 }
-.contact-form .common-heading-area h3 {
+.contact-form .common-heading-area h2 {
   color: #fff;
   font-size: 28px;
 }
@@ -1502,7 +1502,7 @@ table {
   text-transform: capitalize;
   margin: 10px 0;
 }
-.contact-heading h3 {
+.contact-heading h2 {
   color: #fff;
 }
 .contact-heading p {
@@ -2511,7 +2511,7 @@ table {
 .four_zero_four_bg h1 {
   font-size: 80px;
 }
-.four_zero_four_bg h3 {
+.four_zero_four_bg h2 {
   font-size: 80px;
 }
 .content_box_404 {
@@ -2737,3 +2737,84 @@ table {
   font-size: 12px !important;
 }
 /* End confirmation modal */
+/* ribbon */
+.ribbon {
+  position: absolute;
+  top: 90px;
+  width: 170px;
+  left: 6px;
+  transform: rotate(-45deg);
+  transform-origin: bottom left;
+  padding: 6px 20px 12px;
+  background: linear-gradient(120deg, #0B1D27, #0B1D27);
+  background-clip: padding-box;
+  clip-path: polygon(
+0 0,
+100% 0,
+100% 100%,
+calc(100% - 8px) calc(100% - 8px),
+8px calc(100% - 8px),
+0 100%
+);
+  -webkit-mask: linear-gradient(135deg, transparent calc(50% - 5.656px), #fff 0) bottom left,
+linear-gradient(-135deg, transparent calc(50% - 5.656px), #fff 0) bottom right;
+  -webkit-mask-size: 300vmax 300vmax;
+  -webkit-mask-composite: destination-in;
+  mask-composite: intersect;
+  color: white;
+  font-size: 13px;
+  font-weight:500;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.text-add p{
+  padding:14px 20px;
+  /* background-color:#F5C449; */
+  background-color:#fff;
+  border-radius:10px 10px 0 0px;
+  margin-bottom: -30px;
+  position: relative;
+  line-height:15px;
+  z-index: 9;
+  font-size: 16px;
+  font-weight:600;
+  text-transform: uppercase;
+  border: 1px solid transparent;
+}
+/* .text-add p:after {
+  bottom: -14px;
+  content: "";
+  position: absolute;
+  width: 6px;
+  left: 0;
+  margin: auto;
+  z-index: 99;
+
+  right: 0;
+  border-left: 18px solid transparent;
+  border-right: 18px solid transparent;
+  border-top: 14px solid #F5C448;
+  border-bottom: 0px solid transparent;
+} */
+.plan-card-header{
+  position: relative;
+}
+/* .plan-card-header::after{
+  content:"";
+  height:45%;
+  width: 100%;
+  background-color: #F5C448;
+  top:50px;
+  border-radius:0px 0px 50% 50%;
+  left: 0;
+  position: absolute;
+  transform: translateY(-50%);
+  z-index: -2;
+} */
+.plan-card-header h6{
+  margin-top:30px;
+}
+.plan-card-header{
+  padding-top: 20px;
+}
+/* end ribbon */
