--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -32,6 +32,7 @@ h1 {
   font-size:40px;
   line-height:48px;
   margin-bottom: 16px;
+  margin-top: 16px;
   font-weight: 600;
   letter-spacing: -0.2px;
 }
@@ -40,10 +41,12 @@ h2 {
   line-height: 42px;
   margin-bottom: 16px;
   font-weight: 600;
+  margin-top: 16px;
   letter-spacing: -0.2px;
 }
 h3 {
   font-size:28px;
+  margin-top: 12px;
   line-height: 39px;
   margin-bottom: 12px;
   font-weight: 600;
@@ -52,6 +55,7 @@ h3 {
 h4 {
   font-size: 24px;
   line-height:34px;
+  margin-top: 12px;
   margin-bottom: 12px;
   font-weight: 600;
   letter-spacing: -0.2px;
@@ -59,6 +63,7 @@ h4 {
 h5 {
   font-size: 20px;
   line-height:30px;
+  margin-top: 12px;
   margin-bottom: 12px;
   font-weight: 600;
   letter-spacing: -0.2px;
@@ -67,6 +72,7 @@ h6 {
   font-size:18px;
   line-height:28px;
   margin-bottom: 10px;
+  margin-top: 10px;
   font-weight: 600;
   letter-spacing: -0.2px;
 }
@@ -81,7 +87,6 @@ a,
 a:hover {
   text-decoration: none;
 }
-
 .container {
   max-width: 1255px;
 }
@@ -92,7 +97,6 @@ a:hover {
   font-weight: 600;
   margin-bottom: 16px;
 }
- 
 .hero-area-content h1 span {
   color: #f5c448;
 }
