--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -627,3 +627,59 @@ table.dataTable.dtr-inline.collapsed > tbody > tr > th.dtr-control::before {
   margin: 0 12px;
   font-size: 22px;
 }
+
+
+/* test */
+.market-about-thumbnail.image-skeleton {
+  width: 450px;
+  height: 607px;
+}
+
+ 
+
+.image-skeleton img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  display: block;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.image-skeleton.loaded {
+  background: none;
+  animation: none;
+}
+
+.image-skeleton.loaded img {
+  opacity: 1;
+}
+
+.image-skeleton {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background: #f0f0f0; /* Light gray background */
+  overflow: hidden;
+}
+
+.image-skeleton::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, rgba(225, 225, 214, 0.1) 0%,  rgba(241, 184, 45, 0.5) 50%, rgba(255, 255, 255, 1) 100%);
+  animation: shimmer 1.5s infinite ease-in-out;
+}
+
+@keyframes shimmer {
+  0% {
+    left: -100%;
+  }
+  100% {
+    left: 100%;
+  }
+}
