--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3074,13 +3074,11 @@ table {
   background-color: #f5c448;
   box-shadow: rgba(70, 74, 78, 0.5) 2px 8px 24px;
 }
-
 .warning-mobile-view i {
   font-size: 20px;
   color: #fff;
   transition: transform 0.3s ease-in-out;
 }
-
 .warning-content p {
   color: #000;
   font-size: 12px;
@@ -3202,7 +3200,6 @@ table {
   border: 10px solid #fff;
   border-radius: 50%;
 }
-
 .blur-box {
   height: 100%;
   width: 100%;
@@ -3419,7 +3416,6 @@ table {
 .bonus-card {
   transition: 0.5s;
 }
-
 .bonus-card:hover,
 .bonus-card:hover .evaluation-item {
   background: #f5c448;
@@ -3440,4 +3436,78 @@ table {
 }
 .bonus-card:hover .get-step-number {
   color: #fff;
+}
+
+.coin-info-table tr:hover td{
+    background-color: #202228;
+ 
+}
+.bonus-highlight-list ul li{
+  font-size: 20px;
+  color:#F5C448;
+}
+.bonus-highlight-list ul li p{
+  font-weight: 600;
+}
+.bonus-highlight-list ul li p span{
+  color: #2C88C9;
+}
+.bonus-highlight-list ul li{
+  box-shadow: 0px 16.9px 25.36px 0px #C4CDDA40;
+  border-radius: 10px;
+  padding: 10px 20px;
+  display: block;
+}
+.secondary-color{
+  color: #2C88C9;
+}
+.prizes-item-number{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:50px;
+  width: 50px;
+  border-radius: 50%;
+  background: #F5C44833;
+  color: #F5C448;
+  font-size:28px;
+  font-weight: 600;
+
+}
+.prizes-item-content p{
+  font-weight: 600;
+  line-height: 28px;
+}
+.prizes-item{
+  background-color:#fff;
+  padding: 15px;
+  border-radius: 10px;
+}
+.top-prizes{
+  background: #F5C448;
+  box-shadow: 0px 16.9px 25.36px 0px #C4CDDA40;
+  border-radius: 10px;
+  padding: 20px;
+  padding-bottom: 40px;
+}
+.bonus-terms-condition-option,.condition-item ul{
+  padding-left: 30px;
+  list-style-type: disc;
+}
+.condition-item ul{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.condition-item h2{
+  font-size: 24px;
+  font-weight: 600;
+  color: #000;;
+}
+.condition-item .prizes-item .prizes-item-number{
+  background-color: white;
+}
+.condition-item .prizes-item{
+  background: #F5C448;
+
 }
