--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3825,5 +3825,5 @@ background: linear-gradient(97.46deg, rgba(245, 196, 72, 0.09) 0%, rgba(255, 255
 } */
 
 .customer-satisfaction-text { 
-    /* padding-bottom: 37px; */
+    padding-bottom: 37px;
 }
